Fix styles on Safari

--- a/3d/3d.css
+++ b/3d/3d.css
@@ -33,4 +33,7 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 0.5em;
   max-width: 90vw;
+  font-size: inherit;
+  appearance: none;
+  -webkit-appearance: none;
 }
